--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -6,254 +6,125 @@
   <title>Buscador</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-<link rel="stylesheet" href="style.css">
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <link rel="stylesheet" href="style.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PC9JETB0VP');
 
-  gtag('config', 'G-PC9JETB0VP');
+    let itemsPorCarga = 30;
+    let elementosMostrados = 0;
 
-
-  let itemsPorCarga = 30;
-  let elementosMostrados = 0;
-
-  function normalizarTexto(texto) {
-    return texto.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toLowerCase();
-  }
-
-  function ordenarYLimitar() {
-    const ul = document.getElementById("busquedas");
-    const li = Array.from(ul.querySelectorAll("li"));
-    elementosMostrados = 0;
-
-    li.forEach(el => el.style.display = "none");
-
-    for (let i = 0; i < itemsPorCarga && i < li.length; i++) {
-      li[i].style.display = "";
-      elementosMostrados++;
+    function normalizarTexto(texto) {
+      return texto.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toLowerCase();
     }
 
-    document.getElementById("verMasBtn").classList.toggle("hidden", elementosMostrados >= li.length);
-  }
+    function ordenarYLimitar() {
+      const ul = document.getElementById("busquedas");
+      const li = Array.from(ul.querySelectorAll("li"));
+      elementosMostrados = 0;
 
-  function mostrarMas() {
-    const ul = document.getElementById("busquedas");
-    const li = Array.from(ul.querySelectorAll("li"));
-    let nuevosMostrados = 0;
+      li.forEach(el => el.style.display = "none");
 
-    for (let i = elementosMostrados; i < li.length && nuevosMostrados < itemsPorCarga; i++) {
-      li[i].style.display = "";
-      nuevosMostrados++;
-      elementosMostrados++;
-    }
-
-    if (elementosMostrados >= li.length) {
-      document.getElementById("verMasBtn").classList.add("hidden");
-    }
-  }
-
-  function filtrar() {
-    const input = document.getElementById("buscar").value.trim();
-    const palabrasFiltro = normalizarTexto(input).split(/\s+/).filter(Boolean);
-    const ul = document.getElementById("busquedas");
-    const li = Array.from(ul.querySelectorAll("li"));
-    const estado = document.getElementById("estadoBusqueda");
-
-    estado.classList.remove("hidden");
-    estado.innerHTML = `Buscando<span class="dot-1"></span><span class="dot-2"></span><span class="dot-3"></span>`;
-
-    setTimeout(() => {
-      let encontrados = 0;
-
-      li.forEach(el => {
-       Capturamos TODO el texto del li, incluyendo los <span class="hidden">
-        const spans = Array.from(el.querySelectorAll("span.hidden")).map(s => s.textContent);
-        const texto = normalizarTexto((el.textContent || "") + " " + spans.join(" "));
-
-       Verificamos que TODAS las palabras escritas estén en el texto
-        const coincide = palabrasFiltro.every(palabra => texto.includes(palabra));
-
-        el.style.display = coincide ? "" : "none";
-        if (coincide) encontrados++;
-      });
-
-      if (palabrasFiltro.length > 0) {
-        estado.classList.remove("hidden");
-        estado.innerHTML = encontrados > 0
-          ? `Resultados encontrados: ${encontrados}`
-          : `No se encontraron resultados.`;
-        document.getElementById("verMasBtn").classList.add("hidden");
-      } else {
-        estado.classList.add("hidden");
-        ordenarYLimitar();
+      for (let i = 0; i < itemsPorCarga && i < li.length; i++) {
+        li[i].style.display = "";
+        elementosMostrados++;
       }
-    }, 300);
-  }
 
-  window.addEventListener("load", () => {
-    document.getElementById("buscar").focus();
-    setTimeout(() => {
-      const input = document.getElementById("buscar");
-      input.focus();
-      input.setSelectionRange(input.value.length, input.value.length);
-    }, 200);
-    ordenarYLimitar();
-  });
-  
-  document.getElementById('btnRegresar').addEventListener('click', () => {
-    // Suponiendo que en localStorage tienes guardada la URL anterior en 'paginaAnterior'
-    const paginaAnterior = localStorage.getItem('paginaAnterior');
-    if (paginaAnterior) {
-      window.location.href = paginaAnterior;
-    } else {
-      // Si no hay valor guardado, vuelve a la página principal por defecto
-      window.history.back();
+      document.getElementById("verMasBtn").classList.toggle("hidden", elementosMostrados >= li.length);
     }
-  });
-</script>
-  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
+
+    function mostrarMas() {
+      const ul = document.getElementById("busquedas");
+      const li = Array.from(ul.querySelectorAll("li"));
+      let nuevosMostrados = 0;
+
+      for (let i = elementosMostrados; i < li.length && nuevosMostrados < itemsPorCarga; i++) {
+        li[i].style.display = "";
+        nuevosMostrados++;
+        elementosMostrados++;
+      }
+
+      if (elementosMostrados >= li.length) {
+        document.getElementById("verMasBtn").classList.add("hidden");
+      }
+    }
+
+    function filtrar() {
+      const input = document.getElementById("buscar").value.trim();
+      const palabrasFiltro = normalizarTexto(input).split(/\s+/).filter(Boolean);
+      const ul = document.getElementById("busquedas");
+      const li = Array.from(ul.querySelectorAll("li"));
+      const estado = document.getElementById("estadoBusqueda");
+
+      estado.classList.remove("hidden");
+      estado.innerHTML = `Buscando<span class="dot-1"></span><span class="dot-2"></span><span class="dot-3"></span>`;
+
+      setTimeout(() => {
+        let encontrados = 0;
+
+        li.forEach(el => {
+          // Capturamos todo el texto del li, incluyendo los <span class="hidden">
+          const spans = Array.from(el.querySelectorAll("span.hidden")).map(s => s.textContent);
+          const texto = normalizarTexto((el.textContent || "") + " " + spans.join(" "));
+
+          // Verificamos que todas las palabras escritas estén en el texto
+          const coincide = palabrasFiltro.every(palabra => texto.includes(palabra));
+
+          el.style.display = coincide ? "" : "none";
+          if (coincide) encontrados++;
+        });
+
+        if (palabrasFiltro.length > 0) {
+          estado.classList.remove("hidden");
+          estado.innerHTML = encontrados > 0
+            ? `Resultados encontrados: ${encontrados}`
+            : `No se encontraron resultados.`;
+          document.getElementById("verMasBtn").classList.add("hidden");
+        } else {
+          estado.classList.add("hidden");
+          ordenarYLimitar();
+        }
+      }, 300);
+    }
+
+    window.addEventListener("load", () => {
+      document.getElementById("buscar").focus();
+      setTimeout(() => {
+        const input = document.getElementById("buscar");
+        input.focus();
+        input.setSelectionRange(input.value.length, input.value.length);
+      }, 200);
+      ordenarYLimitar();
+    });
+
+  </script>
 </head>
 <body class="bg-[#0a0a0a] text-white min-h-screen flex flex-col">
-<div id="preloader">
-  <div class="preloader-content">
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi3dK3-XAKrEia-lWmiUqAYRfFQ1lR9eJX6ZZH8e_vHf576qf9GJjIWBW9Jg5LsilXX7WO2MOEkg5gzc4pESziaPeMJ9ws9mwtCDdp3p_17D0e0Uop_ZxavwwJeNLBvoyZJ0cxTKQpjzrJIR6LjJslB24tj-77AYrRCacQ3F2S2VPoXpPzPhM1zndxyd1Rg/s3307/B64D5386-DCA4-410B-A0A6-6ACB19D0A06F.png" alt="Logo Preloader" />
-     <div class="prog-bar-wrapper">
-      <div class="prog-bar-bg"></div>
-      <div class="prog-bar"></div>
-    </div>
-    
-    <div class="preloader-extra">
-      <div class="spinner"><div></div></div>
-      <p>Espere, cargando nuestro contenido</p>
-    </div>
-  </div>
-</div>
 
-<style>
-/* ======= AJUSTA ESTE VALOR ======= */
-:root {
-  --preloader-time: 1.5s; }
-
-#preloader {
-  position: fixed;
-  inset: 0;
-  background: #141414;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 99999;
-  transition: opacity 0.8s ease;
-}
-
-
-#preloader.hide {
-  opacity: 0;
-  pointer-events: none;
-}
-
-/* Contenido */
-.preloader-content {
-  text-align: center;
-  color: #65615F;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-}
-
-/* Imagen */
-.preloader-content img {
-  width: 220px;
-  max-width: 80vw;
-  filter: drop-shadow(0px -2px 9px #303030);
-}
-
-/* Barra de progreso */
-.prog-bar-wrapper {
-  width: 205px;
-  height: 6px;
-  position: relative;
-  border-radius: 50px;
-  overflow: hidden;
-}
-.prog-bar-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #919191;
-  border-radius: 50px;
-}
-.prog-bar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background: linear-gradient(to right,#e300ff,#007cf0);
-  border-radius: 50px;
-  animation: loadbar var(--preloader-time) forwards;
-}
-@keyframes loadbar {
-  to { width: 100%; }
-}
-
-/* Texto + spinner */
-.preloader-extra {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-  font-size: 12px;
-  gap: 8px;
-}
-
-/* Spinner */
-.spinner div {
-  width: 20px;
-  height: 20px;
-  border: 4px solid #65615F;
-  border-top-color: transparent;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-@keyframes spin {
-  to { transform: rotate(360deg); }
-}
-</style>
-	<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const preloader = document.getElementById("preloader");
-  const duration = getComputedStyle(document.documentElement)
-                    .getPropertyValue("--preloader-time")
-                    .trim();
-
- 
-  const ms = parseFloat(duration) * (duration.includes("ms") ? 1 : 1000);
-
-  setTimeout(() => {
-    preloader.classList.add("hide");
-  }, ms);
-});
-</script> 
 <header class="bg-black py-4 px-6 shadow-md fixed top-0 left-0 w-full z-50">
-<div class="max-w-5xl mx-auto flex items-center justify-between gap-4"><input id="buscar" type="text" placeholder="Que vamos a buscar ahora?"  class="w-full bg-[#1a1a1a] text-white placeholder-[#bfbfbf] rounded-md px-4 py-3 text-base focus:outline-none"  oninput="filtrar()"  autofocus/>
-<button id="btnRegresar" 
-        class="flex items-center text-white text-lg hover:text-yellow-400 transition ml-6" 
-        title="Regresar" 
-        type="button"
-        onclick="window.location.href='../index.html'">
-   <i class="fas fa-arrow-left text-2xl mr-3"></i> Regresar
-</button>
-</div>
+  <div class="max-w-5xl mx-auto flex items-center justify-between gap-4">
+    <input id="buscar" type="text" placeholder="Que vamos a buscar ahora?"  
+      class="w-full bg-[#1a1a1a] text-white placeholder-[#bfbfbf] rounded-md px-4 py-3 text-base focus:outline-none"  
+      oninput="filtrar()" autofocus/>
+    <button id="btnRegresar" 
+      class="flex items-center text-white text-lg hover:text-yellow-400 transition ml-6" 
+      title="Regresar" 
+      type="button"
+      onclick="window.location.href='../index.html'">
+      <i class="fas fa-arrow-left text-2xl mr-3"></i> Regresar
+    </button>
+  </div>
 </header>
-<div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
-    <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Attack on Titan -->
+<div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> 
+
+<main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
+  <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Attack on Titan -->
 <li>
   <a href="../Series/serie72.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
@@ -6659,15 +6530,14 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
   </a>
 </li>
 <!--FIN-->
-   </ul>
-
-    <div class="text-center mt-6">
-<button id="verMasBtn" onclick="mostrarMas()" class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-2 px-4 rounded hidden">
-  Ver mas...
-</button>
-
-    </div>
-  </main>
+  </ul>
+<div class="text-center mt-6">
+    <button id="verMasBtn" onclick="mostrarMas()" 
+      class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-2 px-4 rounded hidden">
+      Ver más...
+    </button>
+  </div>
+</main>
 
   <!-- Footer -->
   <footer class="bg-[#121212] text-[#999999] text-center py-6 text-sm">
