--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -69,7 +69,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Attack on Titan -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Sirenita 3: Los comienzos de Ariel -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula664.html">
+    <img src="https://image.tmdb.org/t/p/original/yFWP8BSOVC8tQ3NI34gfvEhUqZl.jpg" alt="La Sirenita 3: Los comienzos de Ariel" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La Sirenita 3: Los comienzos de Ariel</div>
+  <div class="text-xs text-white/70">2008</div>
+</article><!-- Attack on Titan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie72.html">
     <img src="https://image.tmdb.org/t/p/original/yFPQ4JhhirnCVe2UIKGMYX7TOGZ.jpg" alt="Attack on Titan" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
