--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El cielo los esperaba -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Sirenita 3: Los comienzos de Ariel -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula664.html">
+    <img src="https://image.tmdb.org/t/p/original/yFWP8BSOVC8tQ3NI34gfvEhUqZl.jpg" alt="La Sirenita 3: Los comienzos de Ariel" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La Sirenita 3: Los comienzos de Ariel</div>
+  <div class="text-xs text-white/70">2008</div>
+</article><!-- El cielo los esperaba -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula663.html">
     <img src="https://image.tmdb.org/t/p/original/6ZzWtwtTxRWxE8rDVQvRQre5UR5.jpg" alt="El cielo los esperaba" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
