--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -73,7 +73,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre angelito 3 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre angelito 4 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula685.html">
+    <img src="https://image.tmdb.org/t/p/original/q9BAc2Q37oQWcRlMKUkuRilJ90E.jpg" alt="Mi pobre angelito 4" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi pobre angelito 4</div>
+  <div class="text-xs text-white/70">2002</div>
+</article><!-- Mi pobre angelito 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula684.html">
     <img src="https://image.tmdb.org/t/p/original/720eeviFT6G8SStX2lEgFsYzqAp.jpg" alt="Mi pobre angelito 3" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
