--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 4 -->
+<li>
+  <a href="../Peliculas/pelicula685.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/q9BAc2Q37oQWcRlMKUkuRilJ90E.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi pobre angelito 4 2002</span>
+    <span class="hidden">Después del reciente divorcio de sus padres, Kevin decide pasar la Navidad en casa de Natalie, la nueva novia de su padre, una casa equipada con la más moderna tecnología. Con la ayuda de esta tecnología y haciendo uso de su habitual ingenio, Kevin deberá hacer frente a unos ladrones, además de intentar conseguir que sus progenitores se reconcilien. Nueva entrega de la popular saga de "Solo en casa", que en esta ocasión, y tras perder progresivamente calidad y taquilla en las anteriores, ya se hizo directamente para la televisión y el mercado de video.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi pobre angelito 3 -->
 <li>
   <a href="../Peliculas/pelicula684.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
