--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -40,7 +40,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre angelito 4 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre angelito 5 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula686.html">
+    <img src="https://image.tmdb.org/t/p/original/nxxcHTbqNrEkrJvtCzxzm3TDtU.jpg" alt="Mi pobre angelito 5" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi pobre angelito 5</div>
+  <div class="text-xs text-white/70">2012</div>
+</article><!-- Mi pobre angelito 4 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula685.html">
     <img src="https://image.tmdb.org/t/p/original/q9BAc2Q37oQWcRlMKUkuRilJ90E.jpg" alt="Mi pobre angelito 4" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
