--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 5 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre y dulce angelito -->
+<li>
+  <a href="../Peliculas/pelicula687.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5K7qxX77PJXWuzkZD8rOBduCEKo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi pobre y dulce angelito 2021</span>
+    <span class="hidden">La familia se fue a Japón por las fiestas y, entre la confusión y el apuro, dejó a Max solo en casa con sus diez añitos. Y eso no es todo: una pareja de vecinos está desesperada por recuperar una reliquia invaluable y trata de entrar a hurtadillas. ¿El pobre y dulce angelito? Tiene un arsenal de trampas desopilantes para ellos. No hay lugar como el hogar, dulce hogar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi pobre angelito 5 -->
 <li>
   <a href="../Peliculas/pelicula686.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
